--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <button class="button number" id="zero" value="0">0</button>
                 <button class="button number" value=".">.</button>
                 <button class="button operator equal" id="equal" value="=">=</button>
-                <button class="button trigonometric sin">sin</button>
-                <button class="button trigonometric">cos</button>
-                <button class="button trigonometric">tan</button>
+                <button class="button trigonometric sin" id="sin">sin</button>
+                <button class="button trigonometric" id="cos">cos</button>
+                <button class="button trigonometric" id="tan">tan</button>
             </div>
         </main>
         <script src="./app.js"></script>
