--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <main class="container">
             <div class="value" ><span id="result"></span></div>
             <div class="buttons-container">
-                <button class="button function ac" id="reset">ac</button>
+                <button class="button function ac" id="reset">clr</button>
                 <button class="button function pm" id="del" >del</button>
                 <button class="button function number" value="%">%</button>
                 <button class="button operator number" value="/">&divide;</button>
@@ -35,7 +35,8 @@
                 <button class="button trigonometric" id="tan">tan</button>
             </div>
         </main>
-        <script src="./app.js"></script>
+        <script src="./js/eventHandlers.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 
 </html>
